--- a/Cargo.toml
+++ b/Cargo.toml
@@ -134,6 +134,7 @@ redox_syscall = "0.7"
 colorous = "1.0.12"
 web-time = "1.0.0"
 winit = "0.30.0"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [target.'cfg(target_os = "android")'.dev-dependencies]
 winit = { version = "0.30.0", features = ["android-native-activity"] }
@@ -155,6 +156,7 @@ criterion = { version = "0.8.1", default-features = false, features = [
 [target.'cfg(target_family = "wasm")'.dev-dependencies]
 wasm-bindgen-test = "0.3"
 console_error_panic_hook = "0.1"
+tracing-web = "0.1"
 
 [target.'cfg(not(any(target_os = "android", target_vendor = "apple", target_os = "redox", target_family = "wasm", target_os = "windows")))'.dev-dependencies]
 rustix = { version = "1.0.1", features = ["event"] }
