--- a/Cargo.toml
+++ b/Cargo.toml
@@ -135,6 +135,8 @@ colorous = "1.0.12"
 web-time = "1.0.0"
 winit = "0.30.0"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+glam = { version = "0.30.10", features = ["rand"] }
+rand = "0.9.2"
 
 [target.'cfg(target_os = "android")'.dev-dependencies]
 winit = { version = "0.30.0", features = ["android-native-activity"] }
@@ -157,6 +159,8 @@ criterion = { version = "0.8.1", default-features = false, features = [
 wasm-bindgen-test = "0.3"
 console_error_panic_hook = "0.1"
 tracing-web = "0.1"
+# Allow `rand` crate to compile.
+getrandom = { version = "0.3.4", features = ["wasm_js"] }
 
 [target.'cfg(not(any(target_os = "android", target_vendor = "apple", target_os = "redox", target_family = "wasm", target_os = "windows")))'.dev-dependencies]
 rustix = { version = "1.0.1", features = ["event"] }
